# iac-task

./: .dockerignore  .gitignore  Dockerfile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  run_qa.sh
.github/actions/build-push-image/: action.yml
.github/actions/deploy-cdk/: action.yml
.github/actions/run-qa/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: deploy.yml  main.yml  qa.yml  qa_composite.yml  qa_reusable.yml
infra/: OIDC_SECURITY_IMPLEMENTATION.md  README-OIDC.md  README.md  app.py  cdk.context.json  check-deployment.sh  config.py  deploy-secure-oidc.sh  deploy.sh  pyproject.toml  requirements.txt
infra/infra/: ecr_stack.py  infra_stack.py
infra/stacks/: app_stack.py  ecr_stack.py  github_oidc_stack.py  vpc_stack.py
infra/tests/unit/: test_infra_stack.py
webapp/: Dockerfile  README.md  main.py  models.py  orchestrator.py  pipeline.py  pipeline_models.py  prefect_integration.py  pyproject.toml  run.py  service.py  storage.py  validators.py
webapp/tests/: conftest.py  test_app.py  test_jobs_api.py  test_pipeline.py
