[project]
name = "iac-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.uv.workspace]
members = [
    "infra",
    "webapp"
]
