[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-cdk-cx-api>=2.221.0",
    "aws-cdk-lib>=2.221.0",
    "constructs>=10.4.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=6.2.5",
]

[tool.poe.tasks]
aws-ecr-login = { shell="aws ecr get-login-password --region eu-central-1 | docker login --username user --password-stdin https://146082935119.dkr.ecr.eu-central-1.amazonaws.com" }
