[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.142.1",
    "constructs>=10.0.0,<11.0.0",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.39.4",
    "pytest>=6.2.5",
    "ruff>=0.14.3",
]

[tool.pyrefly]
project-excludes = ["**/cdk.out/**", "**/__pycache__/**", "**/.venv/**"]
