[project]
name = "webapp"
version = "0.1.0"
description = "A FastAPI web application for the IaC task"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "requests>=2.31.0",  # Required for health check in Dockerfile
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
]
