[project]
name = "webapp"
version = "0.1.0"
description = "A FastAPI web application for the IaC task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.0", # Required for health check in Dockerfile
    "prefect>=3.6.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.25.0",
    "pyrefly>=0.39.4",
    "ruff>=0.14.3",
    "pytest-async>=0.1.1",
]
